2014-05-06  Aurelien Jarno  <aurelien@aurel32.net>

        [BZ# 16916]
        * sysdeps/unix/sysv/linux/sparc/bits/eventfd.h (EFD_SEMAPHORE):
        Define.

2014-05-01  David S. Miller  <davem@davemloft.net>

	[BZ #16885]
	* sysdeps/sparc/sparc64/strcmp.S: Fix end comparison handling when
	multiple zero bytes exist at the end of a string.
	Reported by Aurelien Jarno <aurelien@aurel32.net>

	* string/test-strcmp.c (check): Add explicit test for situations where
	there are multiple zero bytes after the first.

2014-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #16510]
	* sysdeps/x86/fpu/bits/mathinline.h: Check __SSE2_MATH__ instead
	of __x86_64__ when disabling x87 inline functions.

2014-01-20  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15605]
	* sysdeps/x86_64/x32/symbol-hacks.h: Include generic symbol-hacks.h.

2014-01-04  Maxim Kuvyrkov  <maxim@kugelworks.com>
	    Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15073]
	* malloc/malloc.c (_int_free): Perform sanity check only if we
        have_lock.

2013-11-11  David S. Miller  <davem@davemloft.net>

	[BZ #16150]
	* sysdeps/sparc/sparc64/multiarch/add_n.S: Resolve to the correct generic
	symbol in the non-vis3 case in static builds.
	* sysdeps/sparc/sparc64/multiarch/addmul_1.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/mul_1.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/sub_n.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/submul_1.S: Likewise.

2013-11-06  David S. Miller  <davem@davemloft.net>

	[BZ #15985]
	* sysdeps/sparc/sparc32/fpu/s_fdim.S (__fdim): Do not use fnegd
	on pre-v9 cpus, use a fnegs+fmovs sequence instead.

2013-09-06  David S. Miller  <davem@davemloft.net>

	* po/zh_TW.po: Update Chinese (traditional) translation from
	translation project.

2013-08-22  David S. Miller  <davem@davemloft.net>

	* po/ca.po: Update Catalan translation from translation project.
	* po/uk.po: Add Ukrainian translations from translation project.

2013-08-03  David S. Miller  <davem@davemloft.net>
